// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PatternLock test Snapshot tests should match snapshot 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="gap vertical"
      data-gap-size="size-8"
    />
    <div
      class="message"
    />
    <div
      class="gap vertical"
      data-gap-size="size-40"
    />
    <div
      class="forgotBtn"
    />
  </div>
</div>
`;

exports[`PatternLock test Snapshot tests should match snapshot with error prop 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="gap vertical"
      data-gap-size="size-8"
    />
    <div
      class="message error"
    >
      Error message
    </div>
    <div
      class="gap vertical"
      data-gap-size="size-40"
    />
    <div
      class="forgotBtn"
    />
  </div>
</div>
`;
